@@ -17,10 +17,10 @@ use Nexendrie\Menu\IMenuControlFactory,
  * @author Jakub Konečný
  */
 class MenuExtension extends \Nette\DI\CompilerExtension {
-  const COMPONENT_SERVICE = "componentFactory";
-  const MENU_FACTORY_SERVICE = "menuFactory";
-  const MENU_TYPES_SECTION = "menu_types";
-  const CONDITIONS_SECTION = "conditions";
+  const SERVICE_COMPONENT_FACTORY = "componentFactory";
+  const SERVICE_MENU_FACTORY = "menuFactory";
+  const SECTION_MENU_TYPES = "menu_types";
+  const SECTION_CONDITIONS = "conditions";
   
   /** @var array */
   protected $defaults = [
@@ -41,29 +41,29 @@ class MenuExtension extends \Nette\DI\CompilerExtension {
   protected $specialSections = [];
   
   function __construct() {
-    $this->defaults[static::MENU_TYPES_SECTION] = [
+    $this->defaults[static::SECTION_MENU_TYPES] = [
       "inline" => __DIR__ . "/../menuInline.latte",
       "list" => __DIR__ . "/../menuList.latte",
     ];
-    $this->defaults[static::CONDITIONS_SECTION] = [
+    $this->defaults[static::SECTION_CONDITIONS] = [
       "loggedIn" => ConditionUserLoggedIn::class,
       "role" => ConditionUserInRole::class,
       "acl" => ConditionPermission::class,
       "callback" => ConditionCallback::class,
     ];
     $this->specialSections = [
-      static::MENU_TYPES_SECTION, static::CONDITIONS_SECTION,
+      static::SECTION_MENU_TYPES, static::SECTION_CONDITIONS,
     ];
   }
   
   function loadConfiguration(): void {
     $config = $this->getConfig($this->defaults);
     $builder = $this->getContainerBuilder();
-    $builder->addDefinition($this->prefix(static::COMPONENT_SERVICE))
+    $builder->addDefinition($this->prefix(static::SERVICE_COMPONENT_FACTORY))
       ->setImplement(IMenuControlFactory::class);
-    $builder->addDefinition($this->prefix(static::MENU_FACTORY_SERVICE))
-      ->setFactory(MenuFactory::class, [$config[static::CONDITIONS_SECTION]]);
-    foreach($config[static::CONDITIONS_SECTION] as $name => $class) {
+    $builder->addDefinition($this->prefix(static::SERVICE_MENU_FACTORY))
+      ->setFactory(MenuFactory::class, [$config[static::SECTION_CONDITIONS]]);
+    foreach($config[static::SECTION_CONDITIONS] as $name => $class) {
       $builder->addDefinition($this->prefix("condition.$name"))
         ->setClass($class);
     }
@@ -73,7 +73,7 @@ class MenuExtension extends \Nette\DI\CompilerExtension {
       }
       $data = Helpers::merge($menu, $this->menuDefaults);
       $service = $builder->addDefinition($this->prefix($name))
-        ->setFactory("@" . MenuFactory::class . "::createMenu", [$name, $data, $config[static::CONDITIONS_SECTION]])
+        ->setFactory("@" . MenuFactory::class . "::createMenu", [$name, $data, $config[static::SECTION_CONDITIONS]])
         ->setAutowired(($name === "default"));
       if($data["translate"]) {
         $service->addSetup("setTranslator");
@@ -84,12 +84,12 @@ class MenuExtension extends \Nette\DI\CompilerExtension {
   function beforeCompile(): void {
     $builder = $this->getContainerBuilder();
     $config = $this->getConfig($this->defaults);
-    $control = $builder->getDefinition($this->prefix(static::COMPONENT_SERVICE));
+    $control = $builder->getDefinition($this->prefix(static::SERVICE_COMPONENT_FACTORY));
     $menus = $builder->findByType(Menu::class);
     foreach($menus as $menuName => $menu) {
       $control->addSetup('?->addMenu(?);', ["@self", "@$menuName"]);
     }
-    foreach($config[static::MENU_TYPES_SECTION] as $type => $template) {
+    foreach($config[static::SECTION_MENU_TYPES] as $type => $template) {
       $control->addSetup('?->addMenuType(?,?);', ["@self", $type, $template]);
     }
   }
